WIP #32 Add CSS Preview to SMS, FB and Twitter.

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,31 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <meta property="og:title" content="Fantasy General Conference" />
+    <meta
+      property="og:description"
+      content="Guess who will be speaking and what color tie they will be wearing, etc."
+    />
+    <meta
+      property="og:image"
+      content="https://fantasygc.org/assets/preview.png"
+    />
+    <meta property="og:url" content="https://fantasygc.org/" />
+    <meta name="twitter:title" content="Fantasy General Conference" />
+    <meta
+      name="twitter:description"
+      content="Guess who will be speaking and what color tie they will be wearing, etc."
+    />
+    <meta
+      name="twitter:image"
+      content="https://fantasygc.org/assets/preview.png"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:site_name" content="Fantasy General Conference" />
+    <meta
+      name="twitter:image:alt"
+      content="Guess who will be speaking and what color tie they will be wearing, etc."
+    />
   </head>
   <body>
     <app-root>
