Update for FB page scraper.

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -18,9 +18,13 @@
     />
     <meta
       property="og:image"
-      content="https://fantasygc.org/assets/preview.png"
+      content="https://fantasygc.org/assets/preview.png?v=1"
     />
     <meta property="og:url" content="https://fantasygc.org/" />
+    <meta property="og:url" content="website" />
+    <!-- Make dynamic when commit/build -->
+    <meta property="og:updated_time" content="1584032471" />
+
     <meta name="twitter:title" content="Fantasy General Conference" />
     <meta
       name="twitter:description"
@@ -28,7 +32,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://fantasygc.org/assets/preview.png"
+      content="https://fantasygc.org/assets/preview.png?v=1"
     />
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:site_name" content="Fantasy General Conference" />
