Added Sentry.io fixed #43

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -40,6 +40,10 @@
       name="twitter:image:alt"
       content="Guess who will be speaking and what color tie they will be wearing, etc."
     />
+
+    <script>
+      window._sentryDsn = "XXX_SENTRY_DSN_XXX";
+    </script>
   </head>
   <body>
     <app-root>
