--- a/client/src/index.html
+++ b/client/src/index.html
@@ -44,6 +44,9 @@
     <script>
       window._sentryDsn = "XXX_SENTRY_DSN_XXX";
     </script>
+
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=Uint8Array%2CObject.values%2CscrollIntoView"></script>
+    <script src="https://cdn.jsdelivr.net/npm/text-encoding@0.6.4/lib/encoding.min.js"></script>
   </head>
   <body>
     <app-root>
